# topas_wrapper

./: README.md
topas_wrapper/: EXPERIMENT_GEOMETRY.txt  EXPERIMENT_PARAMETERS.json  EXPERIMENT_PARAMETERS.toml  pyproject.toml
topas_wrapper/src/topas_wrapper/: create_file_structure.py  file_structure.py  get_data.py  input_constants.py  script_generator.py
topas_wrapper/src/topas_wrapper/base_scripts/: base_script_for_reference.txt
